# inspirequote

./: .gitignore  README.md  cli.py  example_quotes.json  pyproject.toml  requirements.txt  setup.py
inspirequote/: __init__.py  cli.py  core.py  storage.py
tests/: test_core.py  test_storage.py
