[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspirequote"
version = "1.0.0"
description = "A CLI tool to generate and manage inspiring quotes."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "InspireQuote Developer"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["inspiration", "quotes", "cli", "motivation"]
dependencies = []

[project.scripts]
inspirequote = "inspirequote.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/inspirequote"
Repository = "https://github.com/yourusername/inspirequote.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["inspirequote*"]

[tool.setuptools.package-data]
inspirequote = ["*.json"]